--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
+    "@prisma/client": "^5.5.2",
     "@sentry/node": "^7.61.1",
     "colors": "^1.4.0",
     "discord.js": "^14.12.1",
